refactor validation pattern